--- a/src/app/pages/imprint-page/imprint-page.component.scss
+++ b/src/app/pages/imprint-page/imprint-page.component.scss
@@ -1,3 +1,3 @@
 p {
-  max-width: 800px;
+  text-align: justify;
 }
