--- a/src/app/pages/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/landing-page.component.scss
@@ -2,12 +2,6 @@
   align-items: center;
 }
 
-.content {
-  align-items: center;
-  max-width: 600px;
-  width: 100%;
-}
-
 #avatar {
   max-width: 334px;
   width: 80%;
