--- a/src/app/pages/privacy-page/privacy-page.component.scss
+++ b/src/app/pages/privacy-page/privacy-page.component.scss
@@ -1,5 +1,5 @@
 p {
-  max-width: 800px;
+  text-align: justify;
 }
 
 h2 {
